--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,7 +1,28 @@
 
-input {
-    border-radius: 25px;
-    width: 280px;
-    height: 48px;
-    border: 1;
+*{
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
+html, body, #root {
+    height: 100%;
+}
+
+body {
+    background: linear-gradient(107.56deg, #6C64FB 0%, #9B67FF 100%);
+    -webkit-font-smoothing: antialiased;
+}
+
+body, input, button {
+    font-family: Roboto, sans-serif;
+}
+#app {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 60px 30px;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
